add_subdirectory(utilities/surface/surfaceFeatureExtract/extractionMethod)
add_subdirectory(utilities/mesh/conversion/plot3dToFoam)
add_subdirectory(utilities/mesh/manipulation/checkMesh)
add_subdirectory(utilities/mesh/manipulation/createPatch)
add_subdirectory(utilities/mesh/manipulation/mergeMeshes)
add_subdirectory(utilities/mesh/manipulation/topoSet)
add_subdirectory(utilities/mesh/generation/blockMesh)
add_subdirectory(utilities/mesh/generation/extrude/extrudeMesh)
add_subdirectory(utilities/mesh/generation/snappyHexMesh)
add_subdirectory(utilities/parallelProcessing/decomposePar)
add_subdirectory(utilities/postProcessing/dataConversion/foamToVTK)
add_subdirectory(utilities/postProcessing/postProcess)
add_subdirectory(utilities/preProcessing/mapFields)
add_subdirectory(utilities/preProcessing/setFields)
add_subdirectory(utilities/parallelProcessing/reconstructPar)
add_subdirectory(utilities/surface/surfaceFeatureExtract)
add_subdirectory(solvers/basic/potentialFoam)
add_subdirectory(solvers/electromagnetics/mhdFoam)
add_subdirectory(solvers/incompressible/icoFoam)
add_subdirectory(solvers/incompressible/simpleFoam)
add_subdirectory(solvers/incompressible/simpleFoam/overSimpleFoam)
add_subdirectory(solvers/multiphase/interFoam)
add_subdirectory(utilities/mesh/conversion/fluentMeshToFoam)
add_subdirectory(utilities/mesh/manipulation/refineMesh)
