set(_FILES
  turbulenceModels/atmosphericTurbulentTransportModels.C
  turbulenceModels/atmosphericTurbulentFluidThermoModels.C
  porosityModels/powerLawLopesdaCosta/powerLawLopesdaCosta.C
  derivedFvPatchFields/atmBoundaryLayer/atmBoundaryLayer.C
  derivedFvPatchFields/atmBoundaryLayerInletVelocity/atmBoundaryLayerInletVelocityFvPatchVectorField.C
  derivedFvPatchFields/atmBoundaryLayerInletK/atmBoundaryLayerInletKFvPatchScalarField.C
  derivedFvPatchFields/atmBoundaryLayerInletEpsilon/atmBoundaryLayerInletEpsilonFvPatchScalarField.C
  derivedFvPatchFields/atmBoundaryLayerInletOmega/atmBoundaryLayerInletOmegaFvPatchScalarField.C
  derivedFvPatchFields/atmTurbulentHeatFluxTemperature/atmTurbulentHeatFluxTemperatureFvPatchScalarField.C
  derivedFvPatchFields/wallFunctions/atmAlphatkWallFunction/atmAlphatkWallFunctionFvPatchScalarField.C
  derivedFvPatchFields/wallFunctions/atmEpsilonWallFunction/atmEpsilonWallFunctionFvPatchScalarField.C
  derivedFvPatchFields/wallFunctions/atmNutkWallFunction/atmNutkWallFunctionFvPatchScalarField.C
  derivedFvPatchFields/wallFunctions/atmNutUWallFunction/atmNutUWallFunctionFvPatchScalarField.C
  derivedFvPatchFields/wallFunctions/atmNutWallFunction/atmNutWallFunctionFvPatchScalarField.C
  derivedFvPatchFields/wallFunctions/atmOmegaWallFunction/atmOmegaWallFunctionFvPatchScalarField.C
  fvOptions/atmAmbientTurbSource/atmAmbientTurbSource.C
  fvOptions/atmBuoyancyTurbSource/atmBuoyancyTurbSource.C
  fvOptions/atmCoriolisUSource/atmCoriolisUSource.C
  fvOptions/atmLengthScaleTurbSource/atmLengthScaleTurbSource.C
  fvOptions/atmPlantCanopyTurbSource/atmPlantCanopyTurbSource.C
  fvOptions/atmPlantCanopyUSource/atmPlantCanopyUSource.C
  fvOptions/atmPlantCanopyTSource/atmPlantCanopyTSource.C
  fvOptions/atmNutSource/atmNutSource.C
  functionObjects/ObukhovLength/ObukhovLength.C
)
add_library(atmosphericModels ${_FILES})
target_compile_features(atmosphericModels PUBLIC cxx_std_11)
target_compile_definitions(atmosphericModels PUBLIC WM_LABEL_SIZE=${WM_LABEL_SIZE} WM_${WM_PRECISION} NoRepository OPENFOAM=${OPENFOAM_VERSION})
target_link_libraries(atmosphericModels PUBLIC fvOptions incompressibleTurbulenceModels compressibleTurbulenceModels)
target_include_directories(atmosphericModels PUBLIC
  derivedFvPatchFields/atmBoundaryLayer
  derivedFvPatchFields/atmBoundaryLayerInletEpsilon
  derivedFvPatchFields/atmBoundaryLayerInletK
  derivedFvPatchFields/atmBoundaryLayerInletOmega
  derivedFvPatchFields/atmBoundaryLayerInletVelocity
  derivedFvPatchFields/atmTurbulentHeatFluxTemperature
  derivedFvPatchFields/wallFunctions/atmAlphatkWallFunction
  derivedFvPatchFields/wallFunctions/atmEpsilonWallFunction
  derivedFvPatchFields/wallFunctions/atmNutUWallFunction
  derivedFvPatchFields/wallFunctions/atmNutWallFunction
  derivedFvPatchFields/wallFunctions/atmNutkWallFunction
  derivedFvPatchFields/wallFunctions/atmOmegaWallFunction
  functionObjects/ObukhovLength
  fvOptions/atmAmbientTurbSource
  fvOptions/atmBuoyancyTurbSource
  fvOptions/atmCoriolisUSource
  fvOptions/atmLengthScaleTurbSource
  fvOptions/atmNutSource
  fvOptions/atmPlantCanopyTSource
  fvOptions/atmPlantCanopyTurbSource
  fvOptions/atmPlantCanopyUSource
  porosityModels/powerLawLopesdaCosta
  turbulenceModels/RAS/kEpsilonLopesdaCosta
  turbulenceModels/RAS/kL
)
install(TARGETS atmosphericModels DESTINATION ${CMAKE_INSTALL_LIBDIR}/openfoam EXPORT openfoam-targets)
